--- a/notebook/data_analysis.ipynb
+++ b/notebook/data_analysis.ipynb
@@ -1387,6 +1387,111 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Feature Engineering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Time-based features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fraud_data['hour_of_day'] = fraud_data['purchase_time'].dt.hour\n",
+        "fraud_data['day_of_week'] = fraud_data['purchase_time'].dt.dayofweek  # 0=Monday"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Convert to datetime \n",
+        "fraud_data['purchase_time'] = pd.to_datetime(fraud_data['purchase_time'])\n",
+        "fraud_data['signup_time'] = pd.to_datetime(fraud_data['signup_time'])\n",
+        "\n",
+        "# perform the subtraction\n",
+        "fraud_data['time_since_signup'] = (fraud_data['purchase_time'] - fraud_data['signup_time']).dt.total_seconds()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Transaction frequency"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# transaction frequency\n",
+        "fraud_data = fraud_data.sort_values(['user_id', 'purchase_time'])\n",
+        "fraud_data['transaction_count'] = fraud_data.groupby('user_id').cumcount() + 1\n",
+        "fraud_data['time_since_last'] = fraud_data.groupby('user_id')['purchase_time'].diff().dt.total_seconds()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Normalization and Scaling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 151112 entries, 116708 to 109602\n",
+            "Data columns (total 18 columns):\n",
+            " #   Column             Non-Null Count   Dtype         \n",
+            "---  ------             --------------   -----         \n",
+            " 0   user_id            151112 non-null  int64         \n",
+            " 1   signup_time        151112 non-null  datetime64[ns]\n",
+            " 2   purchase_time      151112 non-null  datetime64[ns]\n",
+            " 3   purchase_value     151112 non-null  datetime64[ns]\n",
+            " 4   device_id          151112 non-null  object        \n",
+            " 5   source             151112 non-null  category      \n",
+            " 6   browser            151112 non-null  category      \n",
+            " 7   sex                151112 non-null  category      \n",
+            " 8   age                151112 non-null  int64         \n",
+            " 9   ip_address         151112 non-null  int64         \n",
+            " 10  class              151112 non-null  int64         \n",
+            " 11  purchase_hour      151112 non-null  int32         \n",
+            " 12  ip_address_int     151112 non-null  int64         \n",
+            " 13  hour_of_day        151112 non-null  int32         \n",
+            " 14  day_of_week        151112 non-null  int32         \n",
+            " 15  time_since_signup  151112 non-null  float64       \n",
+            " 16  transaction_count  151112 non-null  int64         \n",
+            " 17  time_since_last    0 non-null       float64       \n",
+            "dtypes: category(3), datetime64[ns](3), float64(2), int32(3), int64(6), object(1)\n",
+            "memory usage: 17.1+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "fraud_data.info()"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
