model_building_notebook added

--- a/notebook/fraud_and_credit_model_training.ipynb
+++ b/notebook/fraud_and_credit_model_training.ipynb
@@ -825,7 +825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {
         "id": "4zEuQm3Cvy20"
       },
@@ -838,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {
         "id": "ctmPRypwvyyr"
       },
@@ -851,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {
         "id": "79H4plACvyvx"
       },
@@ -863,8 +863,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Train on credit card data"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -886,7 +893,10 @@
             "   macro avg       0.90      0.78      0.83     56962\n",
             "weighted avg       1.00      1.00      1.00     56962\n",
             "\n",
-            "ROC-AUC: 0.7805\n"
+            "ROC-AUC: 0.7805\n",
+            "Confusion Matrix:\n",
+            "[[56851    13]\n",
+            " [   43    55]]\n"
           ]
         },
         {
@@ -910,12 +920,23 @@
         "lr_credit.fit(X_train_credit, y_train_credit)\n",
         "y_pred_credit = lr_credit.predict(X_test_credit)\n",
         "print(classification_report(y_test_credit, y_pred_credit))\n",
-        "print(f\"ROC-AUC: {roc_auc_score(y_test_credit, y_pred_credit):.4f}\")"
+        "print(f\"ROC-AUC: {roc_auc_score(y_test_credit, y_pred_credit):.4f}\")\n",
+        "# print confusion matrix\n",
+        "conf_matrix_credit_lr = confusion_matrix(y_test_credit, y_pred_credit)\n",
+        "print(\"Confusion Matrix:\")\n",
+        "print(conf_matrix_credit_lr)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Train on fraud data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -931,7 +952,10 @@
             "   macro avg       0.45      0.50      0.48     30096\n",
             "weighted avg       0.82      0.90      0.86     30096\n",
             "\n",
-            "ROC-AUC: 0.5000\n"
+            "ROC-AUC: 0.5000\n",
+            "Confusion Matrix:\n",
+            "[[27234     0]\n",
+            " [ 2862     0]]\n"
           ]
         },
         {
@@ -953,7 +977,11 @@
         "lr_fraud.fit(X_train_fraud, y_train_fraud)\n",
         "y_pred_fraud = lr_fraud.predict(X_test_fraud)\n",
         "print(classification_report(y_test_fraud, y_pred_fraud))\n",
-        "print(f\"ROC-AUC: {roc_auc_score(y_test_fraud, y_pred_fraud):.4f}\")"
+        "print(f\"ROC-AUC: {roc_auc_score(y_test_fraud, y_pred_fraud):.4f}\")\n",
+        "# print confusion matrix\n",
+        "conf_matrix_credit_lr = confusion_matrix(y_test_fraud, y_pred_fraud)\n",
+        "print(\"Confusion Matrix:\")\n",
+        "print(conf_matrix_credit_lr)"
       ]
     },
     {
@@ -1636,15 +1664,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6yo7-UEKNFgN"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Kgydv-VwNS5O"
@@ -1705,15 +1724,6 @@
         "print(\"Confusion Matrix:\")\n",
         "print(conf_matrix)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "8jyt-YtmNcO6"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
